--- a/src/styles/Footer.css
+++ b/src/styles/Footer.css
@@ -1,163 +1,193 @@
-.footer--section{
-    display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-    /* align-items: center; */
-    background-color: black;
-    color: #ffffff;
-    box-sizing: border-box;
-    height: 75vh;
-    overflow: hidden;
+.footer--section {
+  display: flex;
+  flex-direction: row;
+  justify-content:space-around;
+  /* align-items: center; */
+  background-color: black;
+  color: #ffffff;
+  box-sizing: border-box;
+  height: 50vh;
+  overflow: hidden;
 }
-.border--container{
-    width: 100%;
-    margin: 0 auto;
-    border-top: 1px solid #666666;
+.border--container {
+  width: 100%;
+  margin: 0 auto;
+  border-top: 1px solid #666666;
 }
 .footer--section > div {
-    margin: 50px;
+  margin: 50px;
 }
 
-.footer--title{
-    font-size: 2.7vw;
-    font-weight: 600;
-    font-family: "anton", sans-serif;
-    width: fit-content;
-    letter-spacing: 0.04em;
-    position: relative;
+.footer--title {
+  font-size: 2vw;
+  font-weight: 600;
+  font-family: "anton", sans-serif;
+  width: fit-content;
+  letter-spacing: 0.04em;
+  position: relative;
 }
 .footer--title::after {
-    content: "";
-    position: absolute;
-    height: 2px;
-    left: 0;
-    background-color: #666666;
-    bottom: -3px;
-    width: 50%;
+  content: "";
+  position: absolute;
+  height: 2px;
+  left: 0;
+  background-color: #666666;
+  bottom: -3px;
+  width: 50%;
 }
 
-.footer--docs__list{
-    list-style: none;
-}
-.footer--docs__list li, .contact--list {
-    padding-top: 10px;
-}
-.footer--docs__list li a, .contact--list a{
-    color: #ffffff;
-    font-family: "Roboto";
-    text-decoration: none;
-    font-weight: 450;
-    font-size: 1.56vw;
-    letter-spacing: 0.05em;
-    text-shadow: -0.25px -0.25px 0 transparent, 0.25px 0.25px transparent;
-    text-decoration: none;
-    transition: all 0.25s ease-out;
-}
-.footer--social__handles{
-    position: relative;
+.footer--docs{
+  flex:1;
 }
 
-.social--links{
-    padding-top: 10px;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    left: 8px;
+.footer--docs__list {
+  list-style: none;
+}
+.footer--docs__list li,
+.contact--list {
+  padding-top: 10px;
+}
+.footer--docs__list li a,
+.contact--list a {
+  color: #ffffff;
+  font-family: "Roboto";
+  text-decoration: none;
+  font-weight: 450;
+  font-size: 1.3vw;
+  letter-spacing: 0.05em;
+  text-shadow: -0.25px -0.25px 0 transparent, 0.25px 0.25px transparent;
+  text-decoration: none;
+  transition: all 0.25s ease-out;
+}
+
+.social--links {
+  padding-top: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .social--links a {
-    font-size: 12px;
-    color: #ffffff;
-    padding-right: 10px;
-    transition: all 0.3s ease;
-}
-  
-.footer--section a:hover{
-    color: #B741DD;
+  font-size: 12px;
+  color: #ffffff;
+  padding-right: 10px;
+  transition: all 0.3s ease;
 }
 
-.footer--team__HTS{
-    background-color: #ffffff;
-    color: black;
-    font-family: "anton", sans-serif;
-    text-align: center;
-    line-height: 2rem;
+.footer--section a:hover {
+  color: #777777;
 }
-.social--links a{
+
+.footer--team__HTS {
+  background-color: #ffffff;
+  color: black;
+  font-family: "anton", sans-serif;
+  text-align: center;
+  line-height: 2rem;
+}
+.social--links a {
+  padding-top: 5px;
+  font-size: 21px;
+  padding-left: 5%;
+}
+
+.footer--logo {
+  display: flex;
+  flex: 1;;
+  justify-content: end;
+  align-items: center;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.footer--logo > p{
+  font-size: 1rem;
+  font-weight: 600;
+  font-family: "Roboto", sans-serif;
+  color: #ffffff;
+  padding-top: 10px;
+  letter-spacing: 0.04em;
+}
+
+.footer--contact{
+  flex: 1;
+}
+
+@media screen and (max-width: 1200px) {
+  .footer--section {
+    padding: 1rem;
+  }
+  .footer--section .footer--title {
+    font-size: 1.5rem;
+  }
+
+  .footer--docs__list li {
     padding-top: 5px;
-    font-size: 21px;
-    padding-left: 5%;
-}
-
-@media screen and (max-width: 1200px){
-    .footer--section{
-      padding: 1rem;
-    }
-    .footer--section .footer--title {
-      font-size: 1.5rem;
-    }
+  }
 }
 
 @media screen and (max-width: 768px) {
-      .footer--section {
-        flex-direction: column;
-        padding: 2rem;
-        text-align: center;
-        height: auto;
-      }
-    
-      .footer--section .footer--title {
-        font-size: 8vw;
-        width: 100%;
-      }
-    
-      .footer--section .footer--title::after {
-        height: 1.5px;
-      }
-    
-      .footer--docs__list li a, .contact--list a{
-        font-size: 4.5vw;
-      }
-      .social--links{
-        left: 35%;
-      }
-      .footer--title::after{
-        left: 25%;
-      }
-      .footer--section hr {
-        height: 1.5px;
-      }
-    
-      .footer--logo {
-        display: none;
-      }
-    
-      .footer--docs {
-        padding-top: 1rem;
-      }
-    
-      .footer--social {
-        padding-top: 1rem;
-      }
-    
-      .footer--contact {
-        padding-top: 1rem;
-      }
-      
-      .footer--section .footer--docs hr {
-        width: 100%;
-      }
-    
-      .footer--section hr {
-        width: 100%;
-      }
-}    
+  .footer--section {
+    flex-direction: column;
+    padding: 2rem;
+    text-align: center;
+    height: auto;
+  }
+
+  .footer--logo > p{
+    font-size: 1.5vw;
+  }
+
+  .footer--section .footer--title {
+    font-size: 1.5rem;
+    width: 100%;
+  }
+
+  .footer--section .footer--title::after {
+    height: 1.5px;
+  }
+
+  .footer--docs__list li a,
+  .contact--list a {
+    font-size: 1.2rem;
+  }
+  .social--links {
+    left: 35%;
+  }
+  .footer--title::after {
+    left: 25%;
+  }
+  .footer--section hr {
+    height: 1.5px;
+  }
+
+  .footer--docs {
+    padding-top: 1rem;
+  }
+
+  .footer--contact {
+    padding-top: 1rem;
+    align-items: center;
+  }
+
+  .footer--section .footer--docs hr {
+    width: 100%;
+  }
+
+  .footer--section hr {
+    width: 100%;
+  }
+
+  .footer--logo > p{
+    font-size: 1.5rem;
+  }
+}
 
 @media screen and (max-width: 1000px) {
-    .footer--logo {
-        display: none;
-    }
-    .border--container{
-      border: 0;
-    }
- }
+  .border--container {
+    border: 0;
+  }
+
+  .footer--logo > p{
+    font-size: 0.8rem;
+  }
+}
