--- a/src/styles/glimpse.css
+++ b/src/styles/glimpse.css
@@ -87,7 +87,7 @@
   justify-content: center;
   align-items: center;
   width: 40%;
-  font-family: "montserrat", sans-serif;
+  font-family: "Roboto", sans-serif;
   text-align: center;
 }
 
