--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -34,6 +34,10 @@ main {
 ::-webkit-scrollbar:horizontal {
   display: none;
 }
+
+::-webkit-scrollbar:vertical {
+  display: none;
+}
 ::-webkit-scrollbar {
   width: 10px;
   background-color: black;
