--- a/src/styles/particle.css
+++ b/src/styles/particle.css
@@ -17,7 +17,7 @@ canvas {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: 50% 50%;
-  z-index: -100;
+  z-index: 0;
   top: 0;
 }
 
@@ -29,5 +29,9 @@ canvas {
   width: 100%;
   height: 100%;
   z-index: -99;
-  background: radial-gradient(50% 50% at 50% 50%, rgb(0, 0, 0) 0%);
+  background: radial-gradient(
+    50% 50% at 50% 50%,
+    rgba(119, 119, 119, 0.582) 0%,
+    rgba(0, 0, 0, 0.2) 100%
+  );
 }
