--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -4,6 +4,18 @@
   position: relative;
   z-index: 1;
 }
+
+.faqs--section__background {
+  position: absolute;
+  top: -30%;
+  left: -9%;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0.23;
+  transform: rotate(90deg);
+}
+
 .faqs--text {
   display: flex;
   justify-content: center;
