--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -4,6 +4,17 @@
   position: relative;
 }
 
+.hero-section__background{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0.4;
+  transform: scaleY(-1);
+}
+
 .hero-section > div {
   display: flex;
   justify-content: space-between;
@@ -84,7 +95,13 @@
 
 .hero-section__buttons button a {
   text-decoration: none;
+  width: 100%;
+  height: 100%;
   color: white;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-weight: 500;
 }
 
 .hero-section__buttons button:nth-child(1) {
@@ -143,7 +160,7 @@
   .hero-section__buttons button {
     width: 9.60194rem;
     height: 3.02519rem;
-    font-size: 1.2rem;
+    font-size: 1rem;
   }
 
   .hero-section__image {
@@ -189,13 +206,13 @@
   }
 
   .hero-section__buttons {
-    margin-top: 20px;
+    margin-top: 30px;
   }
 
   .hero-section__buttons button {
     width: 7.60194rem;
-    height: 2.02519rem;
-    font-size: 1rem;
+    height: 2.3rem;
+    font-size: 0.8rem;
   }
 
   .hero-section__image {
@@ -218,8 +235,8 @@
 
   .hero-section__buttons button {
     width: 6.60194rem;
-    height: 1.52519rem;
-    font-size: 0.8rem;
+    height: 2rem;
+    font-size: 0.7rem;
   }
 }
 
@@ -236,5 +253,11 @@
 @media screen and (min-height: 800px) and (max-width: 450px) {
   .hero-section__content {
     margin-top: 100px;
+  }
+}
+
+@media screen and (min-height: 550px) and (min-width: 500px) {
+  .hero-section__image {
+    display: block;
   }
 }
