--- a/src/styles/WhatIsHTS.css
+++ b/src/styles/WhatIsHTS.css
@@ -4,7 +4,17 @@
   display: flex;
   flex-direction: column;
   /* box-sizing: border-box; */
-  background-color: black;
+  position: relative;
+}
+
+.whatIs--section__background{
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  z-index: 0;
+  opacity: 0.23;
 }
 
 .whatIs--image {
