--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -7,6 +7,8 @@
   justify-content: center;
   align-items: center;
   position: relative;
+  margin-top: 10vw;
+  margin-bottom: 10vw;
 }
 
 .heading-container {
