--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -16,11 +16,31 @@
   transform: rotate(90deg);
 }
 
+.end-background{
+  position: relative;
+}
+
+.faq__background{
+  width: 100%;
+  height: 100%;
+}
+
+.faq__background2{
+  position: absolute;
+  bottom: 3px;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 50%;
+  height: 50%;
+  z-index:1;
+}
+
 .faqs--text {
   display: flex;
   justify-content: center;
   padding-top: 50px;
 }
+
 .faqs--text__shadow {
   font-family: "Anton";
   font-style: normal;
