--- a/src/styles/WhatIsHTS.css
+++ b/src/styles/WhatIsHTS.css
@@ -7,7 +7,7 @@
   position: relative;
 }
 
-.whatIs--section__background{
+.whatIs--section__background {
   position: absolute;
   top: 0;
   left: 0;
@@ -48,10 +48,19 @@
   align-items: center;
   margin-block: 10vh;
 }
-.whatIs-moon__image {
+.whatIs-moon__container {
+  position: relative;
   width: 65vw;
   height: 65vw;
   margin-left: -26vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.whatIs-moon__image {
+  width: 100%; /* Full width of the container */
+  height: 100%; /* Full height of the container */
 }
 
 .whatIs-text__main {
@@ -110,7 +119,6 @@
   position: relative;
   margin-right: 12px;
 }
-
 
 @media screen and (max-width: 550px) {
   .whatIs-text__para p {
