--- a/src/styles/Tracks.css
+++ b/src/styles/Tracks.css
@@ -98,6 +98,7 @@ img {
 }
 
 .tracks-container {
+  padding-top: 5%;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -117,7 +118,7 @@ img {
   gap: 5%;
 }
 .box-bundle:nth-child(3) {
-  width: 14vw;
+  width: 13vw;
 }
 
 .horizontal-container {
@@ -137,7 +138,6 @@ img {
   justify-content: space-around;
   z-index: 4;
   opacity: 80%;
-  /* width: 30%; */
 }
 .horizontal-box {
   height: 45%;
@@ -147,9 +147,7 @@ img {
   justify-content: space-between;
   opacity: 80%;
 }
-/* .vertical-box:hover {
-  rotate: 2deg;
-} */
+
 .icon {
   padding-left: 5%;
   width: 30%;
@@ -177,17 +175,17 @@ img {
   /* background-color: red; */
 }
 .tracks-para {
-  padding-top: 5%;
+  padding-top: 2%;
 }
 .tracks-para p {
-  width: 90%;
+  width: 82%;
   font-family: "roboto";
   font-size: 1.3vw;
   line-height: 1.911vw;
   font-weight: 400;
   display: flex;
   flex-wrap: wrap;
-  /* justify-content: space-around; */
+  justify-content: center;
   margin-inline: auto;
   padding-bottom: 2%;
 }
@@ -229,27 +227,33 @@ img {
   .Track-section__background2 {
     bottom: -71%;
     right: -54%;
-    height: 95%;
+    height: 90%;
     width: 136%;
   }
 
   .tracks-container {
     flex-direction: column;
-    gap: 2vw;
+    gap: 3vw;
   }
   .box-bundle {
-    height: 32vw;
-    width: 70vw;
-    /* align-items: center;
-    justify-content: center; */
+    height: 35vw;
+    width: 77vw;
   }
   .box-bundle:nth-child(3) {
-    /* background-color: aqua; */
-    width: 70vw;
-    /* width: 70vw;
-    height: 20vw; */
+    width: 77vw;
+    height: 20vw;
   }
-
+  .box-bundle:nth-child(3) .vertical-box {
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+    /* padding-right: 15%; */
+  }
+  .box-bundle:nth-child(3) .vertical-box .text {
+    text-align: start;
+    font-size: 2.5vw;
+  }
   .text {
     font-size: 2vw;
     /* font-weight: 400; */
@@ -258,7 +262,11 @@ img {
   .tracks-para p {
     /* font-size: ; */
     font-size: 2vw;
-    line-height: 2vw;
-    width: 70%;
+    line-height: 3vw;
+    width: 77%;
+  }
+  .tracks-para p > .word,
+  .tracks-para p > .word {
+    margin-right: 6px;
   }
 }
