--- a/src/styles/Sponsors.css
+++ b/src/styles/Sponsors.css
@@ -3,6 +3,17 @@
     background-color: black;
     width: 100vw;
     height: fit-content;
+    position: relative;
+}
+.sponsors--section__background{
+  position: absolute;
+  top: -11%;
+  left: -9%;
+  width: 100%;
+  height: 90%;
+  z-index: 0;
+  opacity: 0.18;
+  transform: rotate(90deg);
 }
 
 /* sponsors main heading */
@@ -61,7 +72,7 @@
   align-items: center;
   height: fit-content; 
   flex-direction: column;
-  margin-top: 30px;
+  margin-top: 4vw;
 }
 
 /* Powered By sponsors */
@@ -75,7 +86,7 @@
   max-width: 1089px; 
   height: 37vh; 
   padding: 30px; 
-  background-color: #1C2E4680;
+  background-color: #0e1723;
   margin: 20px;
   border: 1px solid #666666;
 }
@@ -139,6 +150,8 @@
   line-height: 99.83%;
   color: #F0EEF0;
   text-shadow: 0px 0px 11px #7D00F2;
+  position: relative;
+  z-index: 2;
 }
 
 /* Sponsors cards */
@@ -159,9 +172,10 @@
   justify-content: center;
   align-items: center;
   margin: 20px;
-  background-color: #1C2E4680;
+  background-color: #0e1723;
   border: 1px solid #666666;
   position: relative;
+  opacity: 97%;
 }
 
 /* corner border */
@@ -173,7 +187,7 @@
   position: absolute;
   background-color: #0e1723b0;
   z-index: 0;
-  opacity: 90%;
+  opacity: 96%;
 }
 
 .sponsors--cards::before,
@@ -244,7 +258,6 @@
     }
     .sponsors--powered__text{
       font-size: 1.5vw;
-      padding-left: 12px;
     }
     .image {
       margin-top: 35px;
@@ -274,7 +287,7 @@
     }
 
     .sponsors--div__1 {
-      width: 55%;
+      width: 60%;
       padding: 15px;
       text-align: center;
     }
@@ -337,7 +350,7 @@
     } */
 
     .sponsors--div__1 {
-      width: 80%;
+      width: 90%;
       padding: 20px;
     }
   
@@ -364,6 +377,7 @@
     .sponsors--powered__para{
       width: 100%;
       font-size: 2.5vw;
+      letter-spacing: 0.18px;
     }
     .image {
       display: flex;
@@ -374,10 +388,10 @@
     }
     .sponsors--poweredBy .image img {
       width: 70%; 
-      margin-top: 10px;
+      margin: 5px;
     }
     .sponsors--cards{
-      width: 280px;
+      width: 300px;
     }
     .sponsors--cards img{
       width: 180px;
