--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -7,13 +7,12 @@
 
 .faqs--section__background {
   position: absolute;
-  top: -27%;
-  left: -9%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: 0;
   opacity: 0.23;
-  transform: rotate(90deg);
 }
 
 .end-background {
@@ -169,7 +168,7 @@
   position: relative;
   opacity: 0;
   transition: max-height 500ms ease-out, margin-top 400ms ease-out,
-  opacity 500ms ease-out;
+    opacity 500ms ease-out;
 }
 
 .question--box .answer.active {
@@ -177,7 +176,7 @@
   margin-top: 0.5rem;
   opacity: 1;
   transition: max-height 1000ms ease-out, margin 400ms ease-out,
-  opacity 800ms ease-out;
+    opacity 800ms ease-out;
 }
 
 .circleContainer {
