--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -7,13 +7,12 @@
 
 .faqs--section__background {
   position: absolute;
-  top: -30%;
-  left: -9%;
+  top: 0;
+  left: 0;
   width: 100%;
   height: 100%;
   z-index: 0;
   opacity: 0.23;
-  transform: rotate(90deg);
 }
 
 .end-background {
@@ -35,17 +34,11 @@
   z-index: 1;
 }
 
-.faqs--text {
-  display: flex;
-  justify-content: center;
-  padding-top: 50px;
-}
-
 .faqs--text__shadow {
   font-family: "Anton";
   font-style: normal;
   font-weight: 400;
-  font-size: 15vw;
+  font-size: 20vw;
   line-height: 99.83%;
   width: 100%;
   position: relative;
@@ -169,7 +162,7 @@
   position: relative;
   opacity: 0;
   transition: max-height 500ms ease-out, margin-top 400ms ease-out,
-  opacity 500ms ease-out;
+    opacity 500ms ease-out;
 }
 
 .question--box .answer.active {
@@ -177,7 +170,7 @@
   margin-top: 0.5rem;
   opacity: 1;
   transition: max-height 1000ms ease-out, margin 400ms ease-out,
-  opacity 800ms ease-out;
+    opacity 800ms ease-out;
 }
 
 .circleContainer {
