--- a/src/styles/Tracks.css
+++ b/src/styles/Tracks.css
@@ -71,7 +71,7 @@ img {
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid #666666;
+  border: 1px solid #a3a3a3;
   background-color: #0e1723;
   position: relative;
 }
