--- a/src/styles/FAQsSection.css
+++ b/src/styles/FAQsSection.css
@@ -78,7 +78,7 @@
   margin: 1vw 0;
   padding: 10px;
   background: #0e1723b0;
-  border: 1px solid #666666;
+  border: 1px solid #a3a3a3;
   position: relative;
   opacity: 80%;
 }
