--- a/src/styles/HeroSection.css
+++ b/src/styles/HeroSection.css
@@ -113,8 +113,12 @@
   background-color: #592ee1;
 }
 
+.hero-section__buttons button:nth-child(1):hover {
+  background: #4c2bd9;
+}
+
 .hero-section__buttons button:nth-child(2) {
-  border: 1px solid #666666;
+  border: 1px solid #a3a3a3;
   background-color: #0e1723;
 }
 
