--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -27,21 +27,96 @@ nav {
   transform: translateX(-55%);
 }
 
+.nav__links a {
+  text-decoration: none;
+  font-family: "Roboto", sans-serif;
+  position: relative;
+  line-height: 1.5;
+  color: #ffffffce;
+  width: max-content;
+}
+
+.nav__links a:hover {
+  color: #ffffff;
+}
+
+.nav__links a::after {
+  content: "";
+  position: absolute;
+  width: 50%;
+  transform: scaleX(0);
+  height: 1px;
+  bottom: 0;
+  left: 25%;
+  background-color: #ffffff;
+  transform-origin: bottom;
+  transition: transform 0.25s ease-out;
+}
+
+.nav__links a:hover::after {
+  transform: scaleX(1);
+  transform-origin: bottom;
+}
+
 .nav__links--scrolled {
   background: rgba(0, 0, 0, 0.8);
   border-radius: 50px;
-  padding: 7px 40px;
-  filter: drop-shadow(0px 5px 5px rgba(0, 0, 0, 0.8));
-  transition: all 1s;
+  padding: 5px 40px;
+  transition: padding 500ms;
   top: 30px;
-  padding-right: 7px;
+  padding-right: 5px;
+  border: 1px solid #ffffff38;
+  backdrop-filter: blur(0.5rem);
+}
+
+.nav__links--scrolled:hover {
+  filter: drop-shadow(0px 2px 2px rgba(0, 0, 0, 0.5));
+  transition: filter 500ms;
 }
 
 .sponsor-us {
-  background: #592ee1;
   border-radius: 50px;
-  padding: 12px 20px;
   cursor: pointer;
+  position: relative;
+  overflow: hidden;
+  padding: 1px;
+  background-image: none;
+  border: none;
+}
+
+.line-wrapper {
+  justify-content: center;
+  align-items: center;
+  display: flex;
+  position: absolute;
+  top: 0%;
+  bottom: 0%;
+  left: 0%;
+  right: 0%;
+}
+
+.card-line {
+  background-image: linear-gradient(
+    94deg,
+    #592ee1 7.5%,
+    #fff 50%,
+    #592ee1 92.5%
+  );
+  border-radius: 0.5rem;
+  width: 1.5rem;
+  height: 15rem;
+  overflow: hidden;
+  transform: rotate(-23deg);
+  animation: rotate 8s ease infinite;
+}
+
+@keyframes rotate {
+  0% {
+    transform: rotate(0deg);
+  }
+  100% {
+    transform: rotate(360deg);
+  }
 }
 
 .sponsor-us a {
@@ -49,10 +124,16 @@ nav {
   font-weight: 500;
   font-size: 0.9375rem;
   text-decoration: none;
+  background: #592ee1;
+  padding: 12px 20px;
+  border-radius: 50px;
+}
+.sponsor-us a::after {
+  display: none;
 }
 
-.sponsor-us:hover {
-  background: #4c26b8;
+.sponsor-us a:hover {
+  background: #4c2bd9;
 }
 
 .nav__links li {
@@ -61,12 +142,6 @@ nav {
   justify-content: center;
 }
 
-.nav__links a {
-  text-decoration: none;
-  font-family: "Roboto", sans-serif;
-  color: white;
-  width: max-content;
-}
 #mlh-trust-badge {
   display: block;
   max-width: 100px;
@@ -123,6 +198,17 @@ nav {
     width: 2rem;
     right: 1rem;
   }
+
+  .card-line {
+    height: 30rem;
+    width: 2rem;
+    animation: rotate 10s ease infinite;
+  }
+
+  .sponsor-us a {
+    width: 100%;
+  }
+
   #mlh-trust-badge {
     top: -30px;
     right: 60px;
@@ -143,7 +229,14 @@ nav {
     height: 30px;
   }
 
-  .sponsor-us {
-    padding: 12px 10px;
+  .card-line {
+    height: 30rem;
+    width: 1.5rem;
+    animation: rotate 8s ease infinite;
+  }
+
+  .sponsor-us a {
+    padding: 12px 8px;
+    font-size: 0.875rem;
   }
 }
