--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -11,6 +11,7 @@
 @import url("./particle.css");
 @import url("./Footer.css");
 @import url("./Venue.css");
+@import url("./Sponsors.css");
 
 * {
   box-sizing: border-box;
