--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,6 +10,7 @@
 @import url("./preloader.css");
 @import url("./particle.css");
 @import url("./Footer.css");
+@import url("./TeamMember.css");
 
 * {
   box-sizing: border-box;
